2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented Thumb.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed comment as the need for that Binding is confirmed.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed TODO left from previous change.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Fixed to support IsDirectionReversed and Orientation.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed an incorrect fix.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented RepeatButton.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Button.cs, CheckBox.cs, Label.cs, ProgressBar.cs, RadioButton.cs, Slider.cs: Let WPF load theme styles automatically.