@@ -1,5 +1,9 @@
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ProgressBar.cs, Slider.cs: Switched to implemented RangeBase.
+
+2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* Slider.cs: Switched to implemented Thumb.
 
 2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>
